--- a/advanced-functions/exercise/exercise.html
+++ b/advanced-functions/exercise/exercise.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <button class="js-start-button" onclick="clickStart();">Start</button>
+    <button class="js-start-button">Start</button>
     <hr>
     <button class="js-addtocart-button" onclick="clickAddToCart();">Add to cart</button>
     <p class="js-message"></p>
@@ -29,13 +29,13 @@
         runTwice(function () { console.log('12b'); });
         runTwice(add);
 
-        function clickStart() {
+        document.querySelector('.js-start-button').addEventListener('click', () => {
             const startButton = document.querySelector('.js-start-button');
             startButton.innerHTML = 'Loading...';
-            setTimeout(function () {
+            setTimeout(() => {
                 startButton.innerHTML = 'Finished!';
             }, 1000);
-        }
+        });
 
         let timeout;
         function clickAddToCart() {
@@ -62,6 +62,38 @@
                 document.title = title;
             }
         }, 1000);
+
+        const multiply = (num1, num2) => num1 * num2;
+        console.log(multiply(2, 3));
+        console.log(multiply(7, 10));
+
+        const countPositive = (numbers) => {
+            let count = 0;
+            numbers.forEach((number) => {
+                if (number > 0) {
+                    count++;
+                }
+            });
+            return count;
+        };
+        console.log(countPositive([1, -3, 5]));
+        console.log(countPositive([-2, 3, -5, 7, 10]));
+
+        const addNum = (array, num) => array.map((value) => value + num);
+        console.log(addNum([1, 2, 3], 2));
+        console.log(addNum([-2, -1, 0, 99], 2));
+
+        const removeEgg = (array) => {
+            let count = 0;
+            return array.filter((food) => {
+                if (food === 'egg' && count < 2) {
+                    count++;
+                    return false;
+                }
+                return true;
+            });
+        };
+        console.log(removeEgg(['egg', 'apple', 'egg', 'egg', 'ham']));
     </script>
 </body>
 
