--- a/advanced-functions/index.html
+++ b/advanced-functions/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <button class="js-button">Click</button>
     <script>
         function greeting() {
             console.log('Hello');
@@ -16,7 +16,7 @@
         greeting();
 
         const num = 2;
-        const function1 = function() {
+        const function1 = function () {
             console.log('Hello2');
         }
         console.log(function1); // [Function: greeting]
@@ -25,7 +25,7 @@
 
         const object1 = {
             name: 2,
-            fun: function() {
+            fun: function () {
                 console.log('Hello3');
             }
         }
@@ -39,28 +39,76 @@
         function run(param) {
             param();
         }
-        run(function() {
+        run(function () {
             console.log('Hello5');
         });
 
-        setTimeout(function() {
+        setTimeout(function () {
             console.log('timeout');
             console.log('timeout2');
         }, 3000);
         console.log('next line'); // next line -> timeout
 
-        setInterval(function() {
+        setInterval(function () {
             console.log('interval');
         }, 3000);
         console.log('next line2'); // next line2 -> interval -> interval -> interval -> ...
 
-        [ 'make dinner', 'wash dishes', 'watch youtube' ].forEach(function(value, index) {
+        ['make dinner', 'wash dishes', 'watch youtube'].forEach((value, index) => {
             if (value === 'wash dishes') {
                 return; // skip
             }
             console.log(index);
             console.log(value);
         });
+
+        const regularFunction = function (param, param2) {
+            console.log('regular function');
+            return 5;
+        }
+        regularFunction();
+        const arrowFunction = (param, param2) => {
+            console.log('arrow function');
+            return 5;
+        }
+        arrowFunction();
+
+        const oneParam = param => {
+            console.log(param + 1);
+        }
+        oneParam(2);
+
+        const oneLine = () => 5; // return 5
+        console.log(oneLine());
+
+        const object2 = {
+            method: () => {
+                console.log('method');
+            },
+            method() {
+                console.log('method');
+            }
+        };
+        object2.method();
+
+        const eventListener = () => {
+            console.log('clicked');
+        }
+        document.querySelector('.js-button').addEventListener('click', eventListener);
+        document.querySelector('.js-button').removeEventListener('click', eventListener);
+        document.querySelector('.js-button').addEventListener('click', () => {
+            console.log('clicked2');
+        });
+
+        console.log([1, -3, 5].filter((value, index) => {
+            return value >= 0;
+        }));
+
+        console.log([1, 1, 3].map((value, index) => {
+            return value * 2;
+        }));
+
+        console.log([1, 1, 3].map(value =>  value * 2)); // [2, 2, 6]
     </script>
 </body>
 
