--- a/advanced-functions/todo-list/todo-list.html
+++ b/advanced-functions/todo-list/todo-list.html
@@ -13,7 +13,7 @@
     <div class="todo-input-grid">
         <input class="js-name-input name-input" placeholder="Todo Name">
         <input type="date" class="js-due-date-input dur-date-input">
-        <button class="add-todo-button" onclick="addTodo();">Add</button>
+        <button class="add-todo-button js-add-todo-button">Add</button>
         <div class="js-todo-list todo-grid"></div>
     </div>
     <script src="todoj-list.js"></script>
